# kaggle_challenges

./: .gitignore  TRANSFERABLE_LESSONS.md  requirements.txt
.github/: copilot-instructions.md
BirdCLEF_CHALLENGE/: main.py  test.py  utils.py
BirdCLEF_CHALLENGE/notebooks/: eda.ipynb
Jigsaw_challenge/notebooks/: huggingface_train.ipynb
Physionet_ECG_challenge/: .gitignore  AGENTS.md  FUTURE_IDEAS.md  LOCAL_PROJECT_MEMORY.md  PROJECT_DECISION_LOG.md  README.md
Physionet_ECG_challenge/aws/: preprocess_data.sh
Physionet_ECG_challenge/config/: hough_notebooks.yaml
Physionet_ECG_challenge/notebooks/: ECG_Challenge_Finetune.ipynb  ECG_Challenge_Finetune_image_to_mask.ipynb  dataframe_to_mask.ipynb  detect_contour.ipynb  image_to_mask.ipynb  training.ipynb  unet_finetuning.ipynb
Physionet_ECG_challenge/scripts/: debug_hough_3d_window.py
Physionet_ECG_challenge/src/: README.md  __init__.py  config.py  detect_bad_masks.py  fine_tune.py  (+9 more)
huggingface_transformer_book/: test_huggingface.py
nemotron_challenge/: .gitignore  AGENTS.md  README.md  pyproject.toml
nemotron_challenge/doc/: EXPERIMENT_CHECKLIST.md  LOCAL_PROJECT_MEMORY.md  PROJECT_DECISION_LOG.md  SUBMISSION_TRACKING.md  errors.md
nemotron_challenge/notebooks/: 00_data_and_lora_prep.ipynb  01_colab_train_and_submit.ipynb  03_colab_short_trace_train_and_submit.ipynb
nemotron_challenge/notebooks/tools/: 04_colab_backfill_generated_eval.ipynb
nemotron_challenge/scripts/: build_experiment_dashboard.py  build_submission_from_run_bundle.py
nemotron_challenge/src/nemotron_challenge/: __init__.py
(+74 files in other folders)
